--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "bcrypt": "^5.1.1",
     "mongodb": "^6.6.1",
     "mongoose": "^7.6.11",
-    "next": "13.5.4",
+    "next": "^14.2.3",
     "next-auth": "^4.23.2",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "eslint-config-next": "^14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
