--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3"
   }
 }
